# OpenCVSample

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  demo.cpp~
demo/: CMakeLists.txt
include/: OpenCVSample.h
samplelib/: CMakeLists.txt
src/: OpenCVSample.cpp  demo.cpp  demo.cpp~
